--- a/navbar.css
+++ b/navbar.css
@@ -8,6 +8,7 @@
 }
 html {
   scroll-behavior: smooth;
+  /* background-color: #F1F5F9; */
 }
 a {
   text-decoration: none;
@@ -101,7 +102,7 @@ nav {
 }
 
 .nav-menu li.active{
-  border: 2px solid rgb(5, 73, 5);
+  border-bottom: 2px solid rgb(5, 73, 5);
 
 }
 
