--- a/projects.css
+++ b/projects.css
@@ -1,3 +1,6 @@
+.projects {
+    padding-block: 3rem;
+}
 .projects-container {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
