--- a/projects.css
+++ b/projects.css
@@ -74,6 +74,61 @@
     max-width: 500px;
 }
 
+/* Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  .modal-content {
+    background-color: white;
+    margin: 10% auto;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 500px;
+    text-align: center;
+  }
+
+
+#modal-title {
+    color: rgb(5, 73, 5);
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 15px;
+  }
+  
+  /* Description text */
+  #modal-description {
+    color: #666; /* Light gray color for description */
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
+  
+  .close-btn {
+    color: rgb(5, 73, 5);
+    float: right;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+  
+  .modal-link {
+    display: inline-block;
+    margin-top: 15px;
+    padding: 10px 20px;
+    background-color: rgb(5, 73, 5);
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+
 @media only screen and (max-width: 768px) {
    .projects-container {
     grid-template-columns: repeat(1, minmax(0, 1fr));
